--- a/grafika/grafy.htm
+++ b/grafika/grafy.htm
@@ -57,7 +57,8 @@ Highcharts.chart('households', {
             formatter: function () {
                 return '€ ' + this.value;
             }
-        }
+        },
+        min: 0
     },
 
     tooltip: {
