--- a/grafika/grafy.htm
+++ b/grafika/grafy.htm
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Electricity prices for household consumers</title>
+		<title>Cena elektřiny pro domácnosti</title>
 
 		<style type="text/css">
 
@@ -20,19 +20,18 @@
 
 var colors = ['#EA614A','#ECA038','#A38456','#008836','#20649B','#6B96CA','#A87A93','#D19C95'];
 
-var spain = [null,0.1152,0.1124,0.1277,0.1294,0.1381,0.1417,0.1492,0.1597,0.1684,0.1766,0.1789,0.1752,0.1787,0.1702,0.1861,0.1815,0.1864,0.1718,0.1796,0.1805,0.1712,0.1873,0.1947],
-estonia = [null,0.0652,0.0639,0.067,0.0712,0.0696,0.0695,0.0711,0.0704,0.0763,0.0771,0.0794,0.0994,0.1007,0.0967,0.0982,0.0951,0.0951,0.0935,0.096,0.0926,0.095,0.0989,0.1048],
-belgium = [null,0.1286,0.15,0.1619,0.1431,0.139,0.1449,0.146,0.1572,0.1595,0.159,0.1684,0.1583,0.1641,0.1673,0.1678,0.1817,0.1842,0.1567,0.1815,0.1929,0.179,0.1903,0.1998],
-portugal = [null,0.1206,0.1074,0.1066,0.1264,0.1383,0.1093,0.1061,0.1015,0.1068,0.1105,0.1174,0.1210,0.1243,0.1268,0.1301,0.1150,0.1153,0.1239,0.1211,0.1106,0.1080,0.1007,0.1028],
-poland = [null,0.1069,0.0965,0.1005,0.0883,0.1010,0.1049,0.1082,0.1145,0.1052,0.1106,0.1195,0.1155,0.1121,0.1107,0.1097,0.1125,0.1105,0.1037,0.1053,0.0960,0.0950,0.0906,0.0889],
-slovakia = [null,0.1152,0.1194,0.1283,0.1294,0.1311,0.1277,0.1376,0.1372,0.1395,0.1400,0.1404,0.1384,0.1366,0.1224,0.1237,0.1223,0.1232,0.1154,0.1249,0.0832,0.0838,0.0942,0.0849],
-ireland = [null,0.1690,0.1559,0.1791,0.1789,0.1635,0.1589,0.1629,0.1584,0.1755,0.1850,0.1954,0.1951,0.2026,0.2008,0.2085,0.1970,0.1991,0.1895,0.1878,0.1846,0.1865,0.1846,0.2006],
-lithuania = [null,0.0737,0.0729,0.0732,0.0799,0.0768,0.0955,0.1005,0.1004,0.1009,0.1042,0.1048,0.0860,0.0878,0.0893,0.0883,0.0874,0.0863,0.0859,0.0818,0.0783,0.0777,0.0771,0.0771],
-bulgaria = [0.0603,0.0593,0.0685,0.0685,0.0685,0.0675,0.0692,0.0688,0.0727,0.0706,0.0796,0.0771,0.0735,0.0689,0.0746,0.0785,0.0798,0.0797,0.0781,0.0796,0.0819,0.0816,0.0838],
-czechia = [0.0963,0.099,0.1167,0.1189,0.1212,0.1277,0.1236,0.1279,0.1372,0.1345,0.1374,0.1377,0.1378,0.1348,0.1137,0.1129,0.1134,0.1153,0.1161,0.1162,0.1176,0.1218,0.1286,0.1299],
-germany = [0.1227,0.1279,0.1299,0.1341,0.1401,0.1359,0.1381,0.137,0.1406,0.1395,0.1441,0.1432,0.1493,0.1489,0.1435,0.144,0.1431,0.1427,0.1388,0.1382,0.1389,0.1383,0.1379,0.1378],
-eu28 = [0.1159,0.1143,0.1149,0.1213,0.1198,0.1191,0.1203,0.1248,0.1282,0.1312,0.1336,0.1384,0.1372,0.1389,0.1375,0.1411,0.1371,0.1379,0.1299,0.1303,0.1274,0.1274,0.1285,0.1329]
-
+var latvia = [null,0.1094,0.1164,0.1404,0.1544,0.1544,0.1604,0.1604,0.1749,0.2005,0.201,0.1985,0.1986,0.1963,0.199,0.1897,0.2384,0.2445,0.2445,0.245,0.2357,0.2295,0.2221,0.2192],
+greece = [null,0.1111,0.1167,0.1225,0.1245,0.1113,0.1285,0.1317,0.1347,0.1334,0.1555,0.1586,0.1831,0.1988,0.2131,0.2153,0.2131,0.2166,0.2079,0.2088,0.2317,0.1974,0.2032,0.2001],
+spain = [null,0.1559,0.1482,0.1689,0.1672,0.1786,0.1839,0.197,0.2123,0.2238,0.242,0.2513,0.2474,0.2524,0.242,0.2646,0.2581,0.2647,0.2468,0.2555,0.2543,0.2417,0.2636,0.274],
+netherlands = [0.1665,0.1648,0.1641,0.1668,0.1769,0.1704,0.1587,0.1607,0.1637,0.1636,0.1688,0.1701,0.1734,0.1741,0.1682,0.1646,0.1831,0.1702,0.1493,0.1474,0.142,0.1389,0.1522,0.1523],
+hungary = [null,0.2021,0.2371,0.2341,0.2576,0.2699,0.2812,0.2672,0.2739,0.2716,0.2719,0.2722,0.2416,0.2306,0.2111,0.2035,0.1983,0.2045,0.1983,0.1995,0.1905,0.1907,0.1848,0.1894],
+luxembourg = [0.1478,0.1444,0.1418,0.1387,0.1561,0.1561,0.1428,0.1446,0.1415,0.1402,0.1436,0.1444,0.1373,0.1358,0.1458,0.1458,0.1482,0.1473,0.1442,0.1437,0.1345,0.1339,0.1365,0.1381],
+portugal = [null,0.1921,0.1783,0.1835,0.1791,0.1893,0.1913,0.2012,0.2014,0.2291,0.2501,0.2589,0.2669,0.2733,0.2796,0.2868,0.293,0.2932,0.3018,0.2939,0.2856,0.2801,0.2759,0.2816],
+germany = [0.1978,0.2056,0.2067,0.2113,0.2121,0.2132,0.2276,0.2336,0.2433,0.2435,0.2511,0.259,0.2777,0.2779,0.2861,0.2854,0.2832,0.2825,0.2878,0.2873,0.2866,0.2876,0.2788,0.28],
+finland = [null,0.0991,0.1041,0.1084,0.1079,0.1074,0.111,0.1148,0.128,0.1308,0.1284,0.1292,0.1279,0.1264,0.1257,0.1237,0.1248,0.1233,0.1261,0.1275,0.1278,0.1287,0.1297,0.1366],
+czechia = [0.1874,0.1874,0.1933,0.1933,0.2137,0.2137,0.2106,0.2106,0.2275,0.2275,0.2368,0.2368,0.247,0.247,0.2184,0.2184,0.2203,0.2203,0.2221,0.224,0.219,0.218,0.2225,0.227],
+eu = [null,0.1564,0.1583,0.1665,0.1641,0.1638,0.1678,0.1731,0.1803,0.1847,0.1884,0.1967,0.2,0.2024,0.204,0.2075,0.209,0.2103,0.2052,0.2053,0.2041,null,null,null],
+euro = [null,0.162,0.1601,0.1673,0.1655,0.165,0.17,0.175,0.1834,0.1877,0.1923,0.2004,0.2049,0.2084,0.2118,0.2159,0.2191,0.2198,0.2128,0.2147,0.214,null,null,null];
 
 var roky = ['1/2007','7/2007','1/2008','7/2008','1/2009','7/2009','1/2010','7/2010','1/2011','7/2011','1/2012','7/2012','1/2013','7/2013','1/2014','7/2014','1/2015','7/2015','1/2016','7/2016','1/2017','7/2017','1/2018','7/2018'];
 
@@ -42,7 +41,11 @@ Highcharts.chart('households', {
     },
 
     title: {
-        text: 'Electricity prices for household consumers'
+        text: 'Cena elektřiny pro domácnosti'
+    },
+
+    subtitle: {
+        text: 'země EU s nejdražší, nejlevnější a největší změnou ceny mezi 2007 a 2017<br/>včetně daní<br/>ve standardu kupní síly (PPS)'
     },
 
     xAxis: {
@@ -51,24 +54,24 @@ Highcharts.chart('households', {
 
     yAxis: {
         title: {
-            text: 'Euro/kilowatt-hour'
+            text: 'cena elektřiny pro domácnosti'
         },
         labels: {
             formatter: function () {
-                return '€ ' + this.value;
+                return this.value + ' PPS/kWh';
             }
         },
         min: 0
     },
 
     tooltip: {
-        valueSuffix: ' €/kWh'
+        valueSuffix: ' PPS/kWh'
     },
 
     plotOptions: {
         series: {
             marker: {
-                symbol: "circle"
+                symbol: 'circle'
             }
         }
     },
@@ -78,7 +81,7 @@ Highcharts.chart('households', {
     },
 
     credits: {
-        href: 'https://appsso.eurostat.ec.europa.eu/nui/show.do?query=BOOKMARK_DS-052780_QID_-75D2B285_UID_-3F171EB0&layout=TIME,C,X,0;GEO,L,Y,0;PRODUCT,L,Z,0;CONSOM,L,Z,1;UNIT,L,Z,2;TAX,L,Z,3;CURRENCY,L,Z,4;INDICATORS,C,Z,5;&zSelection=DS-052780INDICATORS,OBS_FLAG;DS-052780TAX,X_TAX;DS-052780UNIT,KWH;DS-052780CONSOM,4161903;DS-052780PRODUCT,6000;DS-052780CURRENCY,EUR;&rankName1=TAX_1_2_-1_2&rankName2=UNIT_1_2_-1_2&rankName3=CURRENCY_1_2_-1_2&rankName4=CONSOM_1_2_-1_2&rankName5=INDICATORS_1_2_-1_2&rankName6=PRODUCT_1_2_-1_2&rankName7=TIME_1_0_0_0&rankName8=GEO_1_2_0_1&sortC=ASC_-1_FIRST&rStp=&cStp=&rDCh=&cDCh=&rDM=true&cDM=true&footnes=false&empty=false&wai=false&time_mode=NONE&time_most_recent=false&lang=EN&cfo=%23%23%23%2C%23%23%23.%23%23%23',
+        href: 'https://appsso.eurostat.ec.europa.eu/nui/show.do?query=BOOKMARK_DS-052780_QID_31DA3D7F_UID_-3F171EB0&layout=TIME,C,X,0;GEO,L,Y,0;PRODUCT,L,Z,0;CONSOM,L,Z,1;UNIT,L,Z,2;TAX,L,Z,3;CURRENCY,L,Z,4;INDICATORS,C,Z,5;&zSelection=DS-052780INDICATORS,OBS_FLAG;DS-052780TAX,I_TAX;DS-052780CONSOM,4161903;DS-052780UNIT,KWH;DS-052780CURRENCY,PPS;DS-052780PRODUCT,6000;&rankName1=TAX_1_2_-1_2&rankName2=UNIT_1_2_-1_2&rankName3=CURRENCY_1_2_-1_2&rankName4=CONSOM_1_2_-1_2&rankName5=INDICATORS_1_2_-1_2&rankName6=PRODUCT_1_2_-1_2&rankName7=TIME_1_0_0_0&rankName8=GEO_1_2_0_1&sortC=ASC_-1_FIRST&rStp=&cStp=&rDCh=&cDCh=&rDM=true&cDM=true&footnes=false&empty=false&wai=false&time_mode=NONE&time_most_recent=false&lang=EN&cfo=%23%23%23%2C%23%23%23.%23%23%23',
         text: 'Zdroj: Eurostat'
     },
 
@@ -92,44 +95,44 @@ Highcharts.chart('households', {
         color: colors[4]
     }, {
         name: 'eu',
-        data: eu28,
+        data: eu,
         color: colors[3]
+    }, {
+        name: 'euro',
+        data: euro,
+        color: colors[1]
+    }, {
+        name: 'latvia',
+        data: latvia,
+        color: '#111'
+    }, {
+        name: 'greece',
+        data: greece,
+        color: '#222'
     }, {
         name: 'spain',
         data: spain,
-        color: '#111'
-    }, {
-        name: 'estonia',
-        data: estonia,
-        color: '#222'
-    }, {
-        name: 'belgium',
-        data: belgium,
         color: '#333'
+    }, {
+        name: 'netherlands',
+        data: netherlands,
+        color: '#444'
+    }, {
+        name: 'hungary',
+        data: hungary,
+        color: '#555'
+    }, {
+        name: 'luxembourg',
+        data: luxembourg,
+        color: '#666'
     }, {
         name: 'portugal',
         data: portugal,
-        color: '#444'
-    }, {
-        name: 'poland',
-        data: poland,
-        color: '#555'
-    }, {
-        name: 'slovakia',
-        data: slovakia,
-        color: '#666'
-    }, {
-        name: 'ireland',
-        data: ireland,
         color: '#777'
     }, {
-        name: 'lithuania',
-        data: lithuania,
+        name: 'finland',
+        data: finland,
         color: '#888'
-    }, {
-        name: 'bulgaria',
-        data: bulgaria,
-        color: '#999'
     }]
 
 });
