--- a/grafika/grafy.htm
+++ b/grafika/grafy.htm
@@ -86,51 +86,51 @@ Highcharts.chart('households', {
     },
 
     series: [{
-        name: 'germany',
+        name: 'Německo',
         data: germany,
         color: colors[0]
     }, {
-        name: 'czechia',
+        name: 'Česko',
         data: czechia,
         color: colors[4]
     }, {
-        name: 'eu',
+        name: 'EU',
         data: eu,
         color: colors[3]
     }, {
-        name: 'euro',
+        name: 'Eurozóna',
         data: euro,
         color: colors[1]
     }, {
-        name: 'latvia',
+        name: 'Lotyšsko',
         data: latvia,
         color: '#111'
     }, {
-        name: 'greece',
+        name: 'Řecko',
         data: greece,
         color: '#222'
     }, {
-        name: 'spain',
+        name: 'Španělsko',
         data: spain,
         color: '#333'
     }, {
-        name: 'netherlands',
+        name: 'Nizozemsko',
         data: netherlands,
         color: '#444'
     }, {
-        name: 'hungary',
+        name: 'Maďarsko',
         data: hungary,
         color: '#555'
     }, {
-        name: 'luxembourg',
+        name: 'Lucembursko',
         data: luxembourg,
         color: '#666'
     }, {
-        name: 'portugal',
+        name: 'Portugalsko',
         data: portugal,
         color: '#777'
     }, {
-        name: 'finland',
+        name: 'Finsko',
         data: finland,
         color: '#888'
     }]
